# glee

./: .gitignore  .glee.toml  Dockerfile  LICENSE  README.md  another.go  blogConfiguration.go  code_theme.py  config.toml  featureImage.go  ghost.go  ghost_upload_image.py  glee.go  glee.py  globalConfiguration.go  go.mod  go.sum  handle_config.py  hasher.py  hello.py  htmlConversion.go  imageProcessing.go  images.py  install.bat  install.sh  install_go.sh  install_local.sh  installbin.sh  multiTitle.go  process.go  pyproject.toml  rough.txt  s3.py  sample_post.md  styles.py  uploadBlogImages.go  uploadBlogVideos.go  uploadToGhost.go  uploadToS3.go  videoProcessing.go
.github/workflows/: build-and-release.yml  go-release.yml  go-test-app.yml  mac_build.yml
assets/.comments/: glee-readme-banner.png.xml
glee-go/: glee  glee.go  go.mod  go.sum  sample_post.md
python/: Dockerfile  ghost_upload_image.py  handle_config.py  install.sh  pyproject.toml  s3.py
test_images/: apple.heic
