[tool.poetry]
name = "glee"
version = "0.1.0"
description = "A CLI for Ghost blog"
authors = ["Hexmos <info@hexmos.com>"]

[tool.poetry.dependencies]
python = "^3.9"

Nuitka = "^1.7.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
