[tool.poetry]
name = "glee"
version = "0.1.0"
description = "A CLI for Ghost blog"
authors = ["Hexmos <info@hexmos.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyJWT = "^2.3.0"
arrow = "^1.2.2"
requests = "^2.27.1"
python-frontmatter = "^1.0.0"
Nuitka = "^1.7.9"
Pygments = "^2.11.2"
boto3 = "^1.22.1"
beautifulsoup4 = "^4.11.1"
toml = "^0.10.2"
markdown = "2.6.11"
requests-toolbelt = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
